@@ -1,3 +1,8 @@
+2009-01-04  Helmut Eller  <heller@common-lisp.net>
+
+	* slime-repl.el, slime-mrepl.el: Byte-compile the output
+	functions.
+
 2009-01-02  Helmut Eller  <heller@common-lisp.net>
 
 	* slime-mrepl.el: New file.
